[gd_scene load_steps=22 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://right.svg" type="Texture" id=2]
[ext_resource path="res://Monda-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Value.gd" type="Script" id=4]
[ext_resource path="res://sphere.svg" type="Texture" id=5]
[ext_resource path="res://down.svg" type="Texture" id=6]
[ext_resource path="res://super_down.svg" type="Texture" id=7]
[ext_resource path="res://super_right.svg" type="Texture" id=8]
[ext_resource path="res://mine.svg" type="Texture" id=9]
[ext_resource path="res://delta.svg" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=2]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=3]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=4]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=5]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=6]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Resource" ]

[sub_resource type="DynamicFont" id=7]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=8]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=9]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=10]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=11]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[node name="Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Line1" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="D0" type="Sprite" parent="Line1" index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Region" ]

[node name="D0Value" type="LineEdit" parent="Line1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
align = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="D0CheckBox" type="CheckBox" parent="Line1" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="D0Sprite" type="Sprite" parent="Line1" index="3"]

texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="D1" type="Sprite" parent="Line1" index="4"]

texture = ExtResource( 6 )
centered = false
_sections_unfolded = [ "Offset", "Region" ]

[node name="D1Value" type="LineEdit" parent="Line1" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
align = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="D1CheckBox" type="CheckBox" parent="Line1" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="D1Sprite" type="Sprite" parent="Line1" index="7"]

texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="D2" type="Sprite" parent="Line1" index="8"]

texture = ExtResource( 7 )
centered = false
_sections_unfolded = [ "Offset", "Region" ]

[node name="D2Value" type="LineEdit" parent="Line1" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
align = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="D2CheckBox" type="CheckBox" parent="Line1" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="D2Sprite" type="Sprite" parent="Line1" index="11"]

texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="D3" type="Sprite" parent="Line1" index="12"]

texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset", "Region" ]

[node name="D3Value" type="LineEdit" parent="Line1" index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
align = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="D3CheckBox" type="CheckBox" parent="Line1" index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="D3Sprite" type="Sprite" parent="Line1" index="15"]

texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Mine" type="Sprite" parent="Line1" index="16"]

texture = ExtResource( 9 )
centered = false
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="Value" type="LineEdit" parent="Line1" index="17"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
align = 2
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Line2" type="Container" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Start" type="Button" parent="Line2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="GetStarted" type="Button" parent="Line2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ":-)"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Timer" type="LineEdit" parent="Line2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
text = "000:00:00.00"
align = 2
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Pause" type="Button" parent="Line2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 53.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PAUSE"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Remaining" type="LineEdit" parent="Line2" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 30.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
text = "99999"
align = 2
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Settings" type="Button" parent="Line2" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SETTINGS"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Delta" type="Sprite" parent="Line2" index="6"]

texture = ExtResource( 10 )
centered = false
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="CheckBox" type="CheckBox" parent="Line2" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Paused" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="Line2/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Line2/GetStarted" to="." method="_on_GetStarted_pressed"]

[connection signal="pressed" from="Line2/Pause" to="." method="_on_Pause_pressed"]

[connection signal="pressed" from="Line2/Settings" to="." method="_on_Settings_pressed"]

[connection signal="toggled" from="Line2/CheckBox" to="." method="_on_CheckBox_toggled"]


